<resources>
    <string name="app_name">The Tree</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tree">Tree</string>
    <string name="title_upload">Upload</string>
    <string name="title_category">Category</string>
    <string name="title_me">Me</string>
    <string name="title_activity_share">ShareActivity</string>

    <string name="take_photo">TAKE PHOTO</string>
    <string name="gallery">GALLERY</string>
    <string name="photos">PHOTOS</string>
    <string name="videos">VIDEOS</string>
    <string name="documents">DOCUMENTS</string>

    <string name="next">Next</string>
    <string name="email">E-mail</string>
    <string name="select_category">Select Category: </string>
    <string-array name="categories">
        <item>Other</item>
        <item>Instrument</item>
        <item>Book</item>
        <item>Clothing</item>
        <item>Photograph</item>
        <item>House</item>
        <item>Antiques</item>
        <item>Jewelry</item>
    </string-array>

    <string name="privacy_setting">Privacy Setting: </string>
    <string name="set_private">Private</string>
    <string name="set_public">Public</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
