<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home2Activity">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>


    <RadioGroup
        android:id="@+id/home_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/home_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />


        <RadioButton
            android:id="@+id/home_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tree"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/home_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_upload"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/home_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_category"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/home_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_me"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center" />
    </RadioGroup>

</LinearLayout>